syntax = "proto3";

option csharp_namespace = "Luna.Users.Grpc";

import "google/protobuf/timestamp.proto";

package users;

// SERVICE

service UsersService {
  // GET
  rpc GetUsers (GetUsersRequest) returns (UsersList);

  rpc GetUserById (GetUserRequest) returns (UserResponse);

  rpc GetUserByPhoneOrEmail (GetUserByPhoneOrEmailRequest) returns (UserResponse);

  // CREATE

  rpc CreateUser (CreateUserRequest) returns (ExecutedResponse);

  // UPDATE

  rpc UpdateUser (UpdateUserRequest) returns (ExecutedResponse);

  // DELETE

  rpc DeleteUser (DeleteUserRequest) returns (ExecutedResponse);

  rpc DeleteUserById (DeleteUserByIdRequest) returns (ExecutedResponse);
}

// MODELS

message UserModel{
  string id = 1;
  string username = 2;
  string email = 3;
  optional string phoneNumber = 4;
  google.protobuf.Timestamp createdTimestamp = 5;
  bool emailConfirmed = 6;
  optional string image = 7;
}

message UserBlank{
  string username = 1;
  string email = 2;
  optional string phoneNumber = 3;
  optional string image = 4;
}

message UserResponse{
  optional UserModel User = 1;
}

message UsersList{
  repeated UserModel users = 1;
}

// RESPONSE
message ExecutedResponse{
  bool executed = 1;
}

// GET

message GetUsersRequest{}

message GetUserRequest{
  string id = 1;
}

message GetUserByPhoneOrEmailRequest{
  string value = 1;
}

// CREATE
message CreateUserRequest{
  UserBlank userBlank = 1;
}

// UPDATE
message UpdateUserRequest{
  string id = 1;
  UserBlank userBlank = 2;
}

// DELETE
message DeleteUserRequest{
  string username = 1;
}

message DeleteUserByIdRequest{
  string id = 1;
}